# aurora-tool

./: LICENSE  README.md  iam_policy.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
aurora_tool/: main.py  start.py
aurora_tool/aws_utils/: auth.py  info_cluster.py  tags.py
aurora_tool/aws_utils/clusters/: delete.py  instance_info.py  list.py  restore.py
